--- a/portfolio.html
+++ b/portfolio.html
@@ -301,7 +301,8 @@
       </address>
     </div>
     <div class="footer-box2">
-      <p class="footer-desc">присоединяйтесь</p>
+      <p class="footer-desc">
+        присоединяйтесь</p>
       <ul class="name-social-list list">
           <li class="footer-social-item">
               <a class="footer-social-link" href="">
