--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
               <a class="link header-tel" href="tel:+380961111111">
                 <svg class="header-item-mail" width="10" height="16">
                   <use href="./images/icons.svg#icon-smartphone"></use>
-                </svg>
-                +38 096 111 11 11</a
+                </svg>+38 096 111 11 11</a
               >
             </li>
           </ul>
